Add new YAML configurations for various API endpoints and implement waitlist management features